unpackaged/main/default/objects/Bank_Stataments__c/Bank_Stataments__c.object-meta.xml
<CustomObject>
    <description>All info for Merchants Banks Statements will be stored on this object</description>
    <label>Bank Statements</label>
    <nameField>
        <displayFormat>Statement {000000}</displayFormat>
        <label>Stataments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Statements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>