unpackaged/main/default/objects/Bank_Stataments__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account 1</fullName>
            </value>
            <value>
                <fullName>Account 2</fullName>
            </value>
            <value>
                <fullName>Account 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>