unpackaged/main/default/objects/Bank_Stataments__c/fields/Average_Daily_Balance__c.field-meta.xml
<CustomField>
    <fullName>Average_Daily_Balance__c</fullName>
    <label>Average Daily Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>