unpackaged/main/default/objects/Bank_Stataments__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <formula>DATE(
  VALUE(
    TEXT(Year__c)
  ),
  CASE(
    TEXT(Month__c),
    'January', 1,
    'February', 2,
    'March', 3,
    'April', 4,
    'May', 5,
    'June', 6,
    'July', 7,
    'August', 8,
    'September', 9,
    'October', 10,
    'November', 11,
    'December', 12,
    1
  ),
  1
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date</label>
    <type>Date</type>
</CustomField>