unpackaged/main/default/objects/Bank_Stataments__c/fields/Ending_in__c.field-meta.xml
<CustomField>
    <fullName>Ending_in__c</fullName>
    <label>Ending in</label>
    <length>4</length>
    <type>Text</type>
</CustomField>