unpackaged/main/default/objects/Bank_Stataments__c/fields/Month_Converted__c.field-meta.xml
<CustomField>
    <fullName>Month_Converted__c</fullName>
    <formula>CASE(  Month__c  , 
"January", 1,
"February", 2,
"March", 3,
"April", 4,
"May", 5,
"June", 6,
"July", 7,
"August", 8,
"September",9,
"October", 10,
"November", 11,
"December", 12,
null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month (Converted)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>