unpackaged/main/default/objects/Bank_Stataments__c/fields/Number_of_Days_Negative__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days_Negative__c</fullName>
    <label>Number of Days Negative</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>